[package]
name = "qmk-keymap-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
anyhow = "1.0"
dialoguer = "0.11"
regex = "1.11.1"
winit = "0.30.11"
egui = "0.31.1"
egui-winit = "0.31.1"
eframe = "0.31.1"
